[metadata]
name = Square Game
description = A multiplayer example
long_description = file: README.md
author = Darren Eberly
author-email = darren.eberly@gmail.com
license = MIT
license-file = LICENSE
url = https://github.com/Cleptomania/square_game

classifiers =
  Development Status :: 1 - Planning
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Games/Entertainment :: Side-Scrolling/Arcade Games

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
setup_requires =
  setuptools >= 40.6
  pip >= 20
install_requires =
  arcade >= 2.6.0

[options.packages.find]
include =
  square
  square.*

[options.extras_require]
dev =
  flake8
  black
  isort
  mypy
  pytest
  pytest-cov

[bdist_wheel]
universal=0

[coverage:run]
branch = True

[coverage:report]
show_missing = True

[flake8]
max-line-length = 88
exclude = .git,__pycache__,__init__.py,.mypy_cache,.pytest_cache

[isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88